--- a/test.html
+++ b/test.html
@@ -95,7 +95,7 @@ function toggleCache(value) {
 		   id="toggleCache"/><label for="toggleCache">cache
 	enabled</label>
 </div>
-    <canvas id="testCanvas">Your browser doesn't support "canvas".</canvas>
+    <canvas id="testCanvas" width="1280" height="720">Your browser doesn't support "canvas".</canvas>
 
   </body>
 </html>
