--- a/test.html
+++ b/test.html
@@ -26,7 +26,7 @@ var th_spd  = [0., 0.];
 var p       = [0,0];
 var p_spd   = [0,0];
 //var th_acc; // to solve for
-var diss    = 0.0;
+var diss    = 0.0001;
 
 var vlength = [0, 0];
 
@@ -91,8 +91,8 @@ function stepViaHamiltonian(dur) {
   th_spd[0] = (l[1] * p[0] - l[0] * p[1] * cdiff) / l[0] / div;
   th_spd[1] = ((m[0]+m[1]) * l[0] * p[1] - m[1] * l[1] * p[0] * cdiff) / l[1] / m[1] / div;  
 
-  th_spd[0] *= (1 - diss * dur); // friction
-  th_spd[1] *= (1 - diss * dur);
+  //th_spd[0] *= (1 - diss * dur); // friction
+  //th_spd[1] *= (1 - diss * dur);
   
   E -= LK() * diss * dur;
   
