--- a/test.html
+++ b/test.html
@@ -12,19 +12,27 @@
     }
     </style>
 
+  </head>
+  <body onload="init();">
+    <div class="controls">
+      <!--input type="checkbox" onClick="toggleCache(this.checked);" id="toggleCache"/>
+      <label for="toggleCache">cache enabled</label-->
+      <input type="range" min="1" max="99" value="50" class="slider" id="lengthProportion">
+      <input type="range" min="1" max="99" value="50" class="slider" id="massProportion">
+    </div>
+    <canvas id="testCanvas" width="720" height="720">Your browser doesn't support "canvas".</canvas>
     <script>
 var canvas;
 var stage;
 var shape;
 
 var g       = 9.8;      // m/s^2
+var l       = [1., 1.]; // also in m, and make it life-sized for better effect
 var m       = [1., 1.]; // only proportion matters
-var l       = [1., 0.7]; // also in m, and make it life-sized for better effect
 var th      = [1.2, 1.2]; // in radians
 var th_spd  = [0., 0.];
 var p       = [0,0];
 var p_spd   = [0,0];
-//var th_acc; // to solve for
 var diss    = 0.00;
 
 var vlength = [0, 0];
@@ -102,6 +110,24 @@ function stepViaHamiltonian(dur) {
   normalize();
 }
 
+function resize() {
+  var sm = m[0] + m[1];
+  for (var i = 0; i < 2; i++) {
+    var shape = stage.getChildAt(i);
+    shape.graphics
+        .clear()
+        .setStrokeStyle(2)
+        .beginFill("rgb("
+          + Math.round(255 - 255 * m[i] / sm) + "," 
+          + Math.round(255 - 255 * m[i] / sm) + ",255)")
+        .beginStroke("#222")
+        .drawRoundRect(0, 0, 20, vlength[i] + 20, 5)
+        .moveTo(10, 10)
+        .drawCircle(10, 10, 2);
+    shape.regX = shape.regY = 10;
+  }
+}
+
 function init() {
     E = Energy();
     solveViaHamiltonian();
@@ -110,18 +136,9 @@ function init() {
     canvas = document.getElementById("testCanvas");
     stage = new createjs.Stage(canvas);
     
-    calcVlength();
     for (var i = 0; i < 2; i++) {
         shape = new createjs.Shape();
-        shape.graphics
-            .setStrokeStyle(2)
-            .beginFill("#FFF")
-            .beginStroke("#222")
-            .drawRoundRect(0, 0, 20, vlength[i] + 20, 5)
-            .moveTo(10, 10)
-            .drawCircle(10, 10, 2);
 
-        shape.regX = shape.regY = 10;
         shape.x = canvas.width / 2;
         shape.y = canvas.height / 2;
 
@@ -131,6 +148,8 @@ function init() {
 
         stage.addChild(shape);
     }
+    calcVlength();
+    resize();
 
     // add a text object to output the current FPS:
     fpsLabel = new createjs.Text("-- fps", "bold 18px Arial", "#000");
@@ -201,13 +220,28 @@ function toggleCache(value) {
         }
     }
 }
+
+var lengthProportion = document.getElementById("lengthProportion");
+var massProportion = document.getElementById("massProportion");
+
+lengthProportion.oninput = function() {
+  var sum = l[0] + l[1];
+  l[0] = sum * this.value / 100;
+  l[1] = sum * (100 - this.value) / 100;
+  E = Energy();
+  calcVlength();
+  resize();
+}
+
+massProportion.oninput = function() {
+  var sum = m[0] + m[1];
+  m[0] = sum * this.value / 100;
+  m[1] = sum * (100 - this.value) / 100;
+  E = Energy();
+  calcVlength();
+  resize();
+}
+
     </script>   
-  </head>
-  <body onload="init();">
-    <div class="controls">
-      <input type="checkbox" onClick="toggleCache(this.checked);" id="toggleCache"/>
-      <label for="toggleCache">cache enabled</label>
-    </div>
-    <canvas id="testCanvas" width="720" height="720">Your browser doesn't support "canvas".</canvas>
   </body>
 </html>
