--- a/double_pendulum.html
+++ b/double_pendulum.html
@@ -10,6 +10,19 @@
       margin: 0px;
       overflow: hidden;
     }
+    
+    .controls {
+      display: inline-block;
+      width:  100%;
+      height: 40px;
+      padding: 10;
+    }
+    
+    .controls input {
+      width: 45%;
+      height: 40px;
+      margin: 10;
+    }
     </style>
 
   </head>
