--- a/double_pendulum.html
+++ b/double_pendulum.html
@@ -54,7 +54,7 @@ var E;
 var div, C1, C2, cdiff, sdiff; // TODEL: debug
 
 function calcVlength() {
-    var size = Math.min(canvas.width, canvas.height) / 3;
+    var size = Math.min(canvas.width, canvas.height) * 3 / 7;
     vlength[0] = l[0] * size / (l[0] + l[1]);
     vlength[1] = l[1] * size / (l[0] + l[1]);
 }
