--- a/double_pendulum.html
+++ b/double_pendulum.html
@@ -16,15 +16,47 @@
       text-align:center;
       display: inline-block;
       width:  100%;
-      height: 80px;
+      height: 100px;
       padding: 0;
     }
     
     .controls input {
       width: 45%;
-      height: 40px;
-      margin: 20;
+      height: 20px;
+      margin: 40;
     }
+    
+    .slider {
+      -webkit-appearance: none;
+      width: 100%;
+      height: 20px;
+      border-radius: 5px;   
+      background: #d3d3d3;
+      outline: none;
+      opacity: 0.7;
+      -webkit-transition: .2s;
+      transition: opacity .2s;
+    }
+
+    .slider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      border: 2;
+      background: #6060ff;
+      cursor: pointer;
+    }
+
+    .slider::-moz-range-thumb {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      border: 2;
+      background: #6060ff;
+      cursor: pointer;
+    }    
     </style>
 
   </head>
@@ -68,7 +100,7 @@ var E = -1;
 var div, C1, C2, cdiff, sdiff; // TODEL: debug
 
 function calcVlength() {
-    var size = Math.min(canvas.width, canvas.height) * 3 / 7;
+    var size = Math.min(canvas.width, canvas.height) * 4 / 9;
     vlength[0] = l[0] * size / (l[0] + l[1]);
     vlength[1] = l[1] * size / (l[0] + l[1]);
 }
@@ -200,7 +232,7 @@ function init() {
 
     // add text objects to output stats:
     for (var i = 0; i < 4; i++) {
-      labels[i] = new createjs.Text("---", "bold 18px Arial", "#000");
+      labels[i] = new createjs.Text("---", "bold 24px Arial", "#000");
       stage.addChild(labels[i]);
     }
 
