--- a/gas.html
+++ b/gas.html
@@ -111,7 +111,7 @@ function init() {
           const bbv = Math.PI * mol.rad * mol.rad;
           console.log("Big ball density = " + (mol.m / bbv));
           console.log("Gas density = " + (1 * (N-1) / (box.w * box.h - bbv)));
-          mol.col = "#00ff00";
+          mol.col = "#20df20";
         }
 
         //mol.tx =  Math.random() * (box.w - 2) + 1;
